# pytemplate

./: .dockerignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
