[project]
name = "pytemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash",
    "fastapi[standard]",
    "pandas",
    "plotly",
    "pydantic",
    "python-dotenv",
    "requests",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ipykernel",
    "mcp",
    "mypy",
    "pytest",
    "ruff",
]
